--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.0",
-        "laravel/socialite": "^3.0"
+        "laravel/socialite": ">=3.0"
     },
     "autoload": {
         "psr-4": {
